templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_custom_error_without_arg_indexes.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x custom error with no flagged arguments
   ,----
 1 | {{ custom_empty() }}
   :    ^^^^^^^|^^^^^^
   :           `-- fix this argument
   `----
