templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_empty_for_loop.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty for loop
   ,----
 1 | {% for %}
   :    ^|^
   :     `-- provide a binding like `variable in iterable`
   `----
