templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_empty_interp_after_text.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty interpolation
   ,----
 1 | hello {{  }}
   :       ^^^|^^
   :          `-- provide an expression
   `----
