templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_empty_interp_on_later_line.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty interpolation
   ,-[3:1]
 2 | line2
 3 | {{  }}
   : ^^^|^^
   :    `-- provide an expression
   `----
