templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_empty_statement.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty statement
   ,----
 1 | {% %}
   : ^^|^^
   :   `-- provide a statement keyword
   `----
