templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_escaped_modifier_close_unclosed.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed delimiter
   ,----
 1 | {{ x \-}}
   : ^|
   :  `-- close the tag with `}}`
   `----
