templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_for_iterable_not_list.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected list, got string
   ,----
 1 | {% for x in str %}x{% end %}
   :             ^|^
   :              `-- provide a value of type list
   `----
