templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_index_access_on_non_list.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected list, got string
   ,----
 1 | {{ str.0 }}
   :    ^|^
   :     `-- provide a value of type list
   `----
