templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_integer_overflow.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x integer literal out of range
   ,----
 1 | {{ 9223372036854775808 }}
   :    ^^^^^^^^^|^^^^^^^^^
   :             `-- use a value between -9223372036854775808 and 9223372036854775807
   `----
