templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_invalid_for_variable.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x invalid loop variable
   ,----
 1 | {% for $ %}
   :        |
   :        `-- use a valid identifier
   `----
