templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_invalid_trim_modifier_on_comment.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x modifier in comment
   ,----
 1 | {#- x #}
   :   |
   :   `-- remove the modifier
   `----
