templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_list_index_out_of_bounds.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x list index 5 out of bounds (length 3)
   ,----
 1 | {{ list.5 }}
   :         |
   :         `-- use an index between 0 and 2
   `----
